--- a/styles.css
+++ b/styles.css
@@ -16,24 +16,84 @@ a, a:hover, a:visited, a:active {
     text-decoration: none;
 }
 
+
 /* HEADER */
 .header {
     background-color: #1F2937;
     display: flex;
-    padding: 20px;
+    justify-content: center;
+    padding: 20px; 
+
+}
+
+.header .header-content {
+    width: 1000px;
+    display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .header .logo {
     font-size: 24px;
     color: #F9FAF8;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 .header .nav-links ul {
     color: #E5E7EB;
     font-size: 18px;
     display: flex;
+    gap: 30px;
+}
+
+/* SECTION 1 */
+.section-1 {
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 20px;
+}
+
+.section-1 .section-1-content {
+    display: flex;
+    width: 1000px;
     gap: 20px;
+}
+
+.section-1 .section-1-header {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.section-1 .text,.image {
+    flex: 1 1 0;
+}
+
+.section-1 .subtext {
+    color: #E5E7EB;
+    font-size: 18px;
+    margin: 16px 0px;
+}
+
+
+.section-1 button {
+    background-color: #3882f6;
+    color: #f9f9f9;
+    padding: 8px 20px;
+    border: none;
+    border-radius: 5px;
+}
+
+.section-1 .image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: grey;
+}
+
+.section-1 .image .placeholder-text {
+    color: #E5E7EB;
+    margin: 20px;
 }
