--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,46 @@ a, a:hover, a:visited, a:active {
     color: #E5E7EB;
     margin: 20px;
 }
+
+/* SECTION 2 */
+.section-2 {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 80px;
+}
+
+.section-2-content {
+    width: 1000px;
+}
+
+.section-2 .section-2-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+    margin: 40px 0px;
+}
+
+.section-2 .boxes {
+    display: flex;
+    gap: 50px;
+    justify-content: center;
+}
+
+.section-2 .boxes .box {
+    text-align: center;
+    width: 175px;
+}
+
+.section-2 .boxes .image {
+    border: 3px solid #3882f6;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    margin: 0 auto 10px auto;
+    height: 175px;
+}
+
+.section-2 .boxes .text {
+    font-size: 18px;
+    color: #1F2937;
+}
