--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,49 @@ a, a:hover, a:visited, a:active {
     margin: 20px;
     text-align: right;
 }   
+
+/* SECTION 4 */
+.section-4 {
+    display: flex;
+    justify-content: center;
+    padding: 50px 0px;;
+}
+
+.section-4 .container {
+    width: 1000px;
+    display: flex;
+    background-color: #3882f6;
+    border-radius: 5px;
+    padding: 40px 100px;
+    gap: 20px;
+}
+
+.section-4 .text {
+    flex: 1 1 200px;
+}
+
+.section-4 .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 1 1 0;
+}
+
+.section-4 .section-4-header {
+    font-weight: 700;
+    color: #f9f9f9;
+    font-size: 20px;
+}
+
+.section-4 .text .subtext {
+    color: white;
+    margin-top: 10px;
+}
+
+.section-4 .button button {
+    background-color: #3882f6;
+    color: #f9f9f9;
+    padding: 8px 20px;
+    border: 1px solid #f9f9f9;
+    border-radius: 5px;
+}
